--- a/Labo3/RelationsNaN-main/Views/Games/Index.cshtml
+++ b/Labo3/RelationsNaN-main/Views/Games/Index.cshtml
@@ -24,6 +24,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Genre)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Platforms)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -44,6 +47,12 @@
                     @if (item.Genre != null)
                     {
                         @Html.DisplayFor(modelItem => item.Genre.Id)
+                    }
+                </td>
+                <td>
+                    @foreach (var platform in item.Platforms)
+                    {
+                        <span class="badge bg-primary">@platform.Name</span>
                     }
                 </td>
                 <td>
